# voice-search-agent

./: .gitignore  README.md  image_indexer.py  pyproject.toml  requirements.txt  voice_search_agent.py
image_vectorizer/: __init__.py  image_vectorizer.py
image_vectors/: chroma.sqlite3
strands_agent/: __init__.py  strands_agent.py
tests/: __init__.py  test_image_vectorizer.py  test_strands_agent.py
web_server/: README.md  package.json  requirements.txt  server.js  server.py
web_server/static/: index.html
